redactable/tests/ui/sensitive_nonzero_secret_rejected.stderr
error: NonZero integer fields cannot use #[sensitive(Policy)] because redaction may need to produce zero; use a nullable scalar or a policy-aware wrapper
 --> tests/ui/sensitive_nonzero_secret_rejected.rs:7:5
  |
7 |     #[sensitive(redactable::Secret)]
  |     ^
